--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cdta",
   "version": "1.0.0",
   "description": "Simple library for the CDTA API",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "start"
   },
