--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/ansonfoong/CDTA.js/issues"
   },
-  "homepage": "https://github.com/ansonfoong/CDTA.js#readme"
+  "homepage": "https://github.com/ansonfoong/CDTA.js#readme",
+  "dependencies": {
+    "node-fetch": "^2.6.0"
+  }
 }
